magpie/parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expr
Rule 2     statement -> statement = expr
Rule 3     expr -> mult
Rule 4     mult -> just
Rule 5     just -> neg
Rule 6     neg -> expt
Rule 7     expt -> fact
Rule 8     fact -> atom
Rule 9     atom -> NUMBER
Rule 10    atom -> NAME
Rule 11    expr -> expr + mult
Rule 12    expr -> expr SUBTRACT mult
Rule 13    mult -> mult * just
Rule 14    mult -> mult / just
Rule 15    just -> just expt
Rule 16    neg -> SUBTRACT neg
Rule 17    expt -> fact POWER neg
Rule 18    fact -> fact FACTORIAL
Rule 19    atom -> ( expr )
Rule 20    atom -> QUOTED

Terminals, with rules where they appear

(                    : 19
)                    : 19
*                    : 13
+                    : 11
/                    : 14
=                    : 2
FACTORIAL            : 18
NAME                 : 10
NUMBER               : 9
POWER                : 17
QUOTED               : 20
SUBTRACT             : 12 16
error                : 

Nonterminals, with rules where they appear

atom                 : 8
expr                 : 1 2 11 12 19
expt                 : 6 15
fact                 : 7 17 18
just                 : 4 13 14 15
mult                 : 3 11 12 13 14
neg                  : 5 16 17
statement            : 2 0


state 0

    (0) S' -> . statement
    (1) statement -> . expr
    (2) statement -> . statement = expr
    (3) expr -> . mult
    (11) expr -> . expr + mult
    (12) expr -> . expr SUBTRACT mult
    (4) mult -> . just
    (13) mult -> . mult * just
    (14) mult -> . mult / just
    (5) just -> . neg
    (15) just -> . just expt
    (6) neg -> . expt
    (16) neg -> . SUBTRACT neg
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    SUBTRACT        shift and go to state 4
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    statement                      shift and go to state 1
    expr                           shift and go to state 2
    mult                           shift and go to state 3
    just                           shift and go to state 5
    neg                            shift and go to state 6
    expt                           shift and go to state 7
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 1

    (0) S' -> statement .
    (2) statement -> statement . = expr

    =               shift and go to state 14


state 2

    (1) statement -> expr .
    (11) expr -> expr . + mult
    (12) expr -> expr . SUBTRACT mult

    =               reduce using rule 1 (statement -> expr .)
    $end            reduce using rule 1 (statement -> expr .)
    +               shift and go to state 15
    SUBTRACT        shift and go to state 16


state 3

    (3) expr -> mult .
    (13) mult -> mult . * just
    (14) mult -> mult . / just

    +               reduce using rule 3 (expr -> mult .)
    SUBTRACT        reduce using rule 3 (expr -> mult .)
    =               reduce using rule 3 (expr -> mult .)
    $end            reduce using rule 3 (expr -> mult .)
    )               reduce using rule 3 (expr -> mult .)
    *               shift and go to state 17
    /               shift and go to state 18


state 4

    (16) neg -> SUBTRACT . neg
    (6) neg -> . expt
    (16) neg -> . SUBTRACT neg
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    SUBTRACT        shift and go to state 4
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    neg                            shift and go to state 19
    expt                           shift and go to state 7
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 5

    (4) mult -> just .
    (15) just -> just . expt
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    *               reduce using rule 4 (mult -> just .)
    /               reduce using rule 4 (mult -> just .)
    +               reduce using rule 4 (mult -> just .)
    SUBTRACT        reduce using rule 4 (mult -> just .)
    =               reduce using rule 4 (mult -> just .)
    $end            reduce using rule 4 (mult -> just .)
    )               reduce using rule 4 (mult -> just .)
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    expt                           shift and go to state 20
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 6

    (5) just -> neg .

    NUMBER          reduce using rule 5 (just -> neg .)
    NAME            reduce using rule 5 (just -> neg .)
    (               reduce using rule 5 (just -> neg .)
    QUOTED          reduce using rule 5 (just -> neg .)
    *               reduce using rule 5 (just -> neg .)
    /               reduce using rule 5 (just -> neg .)
    +               reduce using rule 5 (just -> neg .)
    SUBTRACT        reduce using rule 5 (just -> neg .)
    =               reduce using rule 5 (just -> neg .)
    $end            reduce using rule 5 (just -> neg .)
    )               reduce using rule 5 (just -> neg .)


state 7

    (6) neg -> expt .

    NUMBER          reduce using rule 6 (neg -> expt .)
    NAME            reduce using rule 6 (neg -> expt .)
    (               reduce using rule 6 (neg -> expt .)
    QUOTED          reduce using rule 6 (neg -> expt .)
    *               reduce using rule 6 (neg -> expt .)
    /               reduce using rule 6 (neg -> expt .)
    +               reduce using rule 6 (neg -> expt .)
    SUBTRACT        reduce using rule 6 (neg -> expt .)
    =               reduce using rule 6 (neg -> expt .)
    $end            reduce using rule 6 (neg -> expt .)
    )               reduce using rule 6 (neg -> expt .)


state 8

    (7) expt -> fact .
    (17) expt -> fact . POWER neg
    (18) fact -> fact . FACTORIAL

    NUMBER          reduce using rule 7 (expt -> fact .)
    NAME            reduce using rule 7 (expt -> fact .)
    (               reduce using rule 7 (expt -> fact .)
    QUOTED          reduce using rule 7 (expt -> fact .)
    *               reduce using rule 7 (expt -> fact .)
    /               reduce using rule 7 (expt -> fact .)
    +               reduce using rule 7 (expt -> fact .)
    SUBTRACT        reduce using rule 7 (expt -> fact .)
    =               reduce using rule 7 (expt -> fact .)
    $end            reduce using rule 7 (expt -> fact .)
    )               reduce using rule 7 (expt -> fact .)
    POWER           shift and go to state 21
    FACTORIAL       shift and go to state 22


state 9

    (8) fact -> atom .

    POWER           reduce using rule 8 (fact -> atom .)
    FACTORIAL       reduce using rule 8 (fact -> atom .)
    NUMBER          reduce using rule 8 (fact -> atom .)
    NAME            reduce using rule 8 (fact -> atom .)
    (               reduce using rule 8 (fact -> atom .)
    QUOTED          reduce using rule 8 (fact -> atom .)
    *               reduce using rule 8 (fact -> atom .)
    /               reduce using rule 8 (fact -> atom .)
    +               reduce using rule 8 (fact -> atom .)
    SUBTRACT        reduce using rule 8 (fact -> atom .)
    =               reduce using rule 8 (fact -> atom .)
    $end            reduce using rule 8 (fact -> atom .)
    )               reduce using rule 8 (fact -> atom .)


state 10

    (9) atom -> NUMBER .

    POWER           reduce using rule 9 (atom -> NUMBER .)
    FACTORIAL       reduce using rule 9 (atom -> NUMBER .)
    NUMBER          reduce using rule 9 (atom -> NUMBER .)
    NAME            reduce using rule 9 (atom -> NUMBER .)
    (               reduce using rule 9 (atom -> NUMBER .)
    QUOTED          reduce using rule 9 (atom -> NUMBER .)
    *               reduce using rule 9 (atom -> NUMBER .)
    /               reduce using rule 9 (atom -> NUMBER .)
    +               reduce using rule 9 (atom -> NUMBER .)
    SUBTRACT        reduce using rule 9 (atom -> NUMBER .)
    =               reduce using rule 9 (atom -> NUMBER .)
    $end            reduce using rule 9 (atom -> NUMBER .)
    )               reduce using rule 9 (atom -> NUMBER .)


state 11

    (10) atom -> NAME .

    POWER           reduce using rule 10 (atom -> NAME .)
    FACTORIAL       reduce using rule 10 (atom -> NAME .)
    NUMBER          reduce using rule 10 (atom -> NAME .)
    NAME            reduce using rule 10 (atom -> NAME .)
    (               reduce using rule 10 (atom -> NAME .)
    QUOTED          reduce using rule 10 (atom -> NAME .)
    *               reduce using rule 10 (atom -> NAME .)
    /               reduce using rule 10 (atom -> NAME .)
    +               reduce using rule 10 (atom -> NAME .)
    SUBTRACT        reduce using rule 10 (atom -> NAME .)
    =               reduce using rule 10 (atom -> NAME .)
    $end            reduce using rule 10 (atom -> NAME .)
    )               reduce using rule 10 (atom -> NAME .)


state 12

    (19) atom -> ( . expr )
    (3) expr -> . mult
    (11) expr -> . expr + mult
    (12) expr -> . expr SUBTRACT mult
    (4) mult -> . just
    (13) mult -> . mult * just
    (14) mult -> . mult / just
    (5) just -> . neg
    (15) just -> . just expt
    (6) neg -> . expt
    (16) neg -> . SUBTRACT neg
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    SUBTRACT        shift and go to state 4
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    expr                           shift and go to state 23
    mult                           shift and go to state 3
    just                           shift and go to state 5
    neg                            shift and go to state 6
    expt                           shift and go to state 7
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 13

    (20) atom -> QUOTED .

    POWER           reduce using rule 20 (atom -> QUOTED .)
    FACTORIAL       reduce using rule 20 (atom -> QUOTED .)
    NUMBER          reduce using rule 20 (atom -> QUOTED .)
    NAME            reduce using rule 20 (atom -> QUOTED .)
    (               reduce using rule 20 (atom -> QUOTED .)
    QUOTED          reduce using rule 20 (atom -> QUOTED .)
    *               reduce using rule 20 (atom -> QUOTED .)
    /               reduce using rule 20 (atom -> QUOTED .)
    +               reduce using rule 20 (atom -> QUOTED .)
    SUBTRACT        reduce using rule 20 (atom -> QUOTED .)
    =               reduce using rule 20 (atom -> QUOTED .)
    $end            reduce using rule 20 (atom -> QUOTED .)
    )               reduce using rule 20 (atom -> QUOTED .)


state 14

    (2) statement -> statement = . expr
    (3) expr -> . mult
    (11) expr -> . expr + mult
    (12) expr -> . expr SUBTRACT mult
    (4) mult -> . just
    (13) mult -> . mult * just
    (14) mult -> . mult / just
    (5) just -> . neg
    (15) just -> . just expt
    (6) neg -> . expt
    (16) neg -> . SUBTRACT neg
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    SUBTRACT        shift and go to state 4
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    expr                           shift and go to state 24
    mult                           shift and go to state 3
    just                           shift and go to state 5
    neg                            shift and go to state 6
    expt                           shift and go to state 7
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 15

    (11) expr -> expr + . mult
    (4) mult -> . just
    (13) mult -> . mult * just
    (14) mult -> . mult / just
    (5) just -> . neg
    (15) just -> . just expt
    (6) neg -> . expt
    (16) neg -> . SUBTRACT neg
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    SUBTRACT        shift and go to state 4
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    mult                           shift and go to state 25
    just                           shift and go to state 5
    neg                            shift and go to state 6
    expt                           shift and go to state 7
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 16

    (12) expr -> expr SUBTRACT . mult
    (4) mult -> . just
    (13) mult -> . mult * just
    (14) mult -> . mult / just
    (5) just -> . neg
    (15) just -> . just expt
    (6) neg -> . expt
    (16) neg -> . SUBTRACT neg
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    SUBTRACT        shift and go to state 4
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    mult                           shift and go to state 26
    just                           shift and go to state 5
    neg                            shift and go to state 6
    expt                           shift and go to state 7
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 17

    (13) mult -> mult * . just
    (5) just -> . neg
    (15) just -> . just expt
    (6) neg -> . expt
    (16) neg -> . SUBTRACT neg
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    SUBTRACT        shift and go to state 4
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    just                           shift and go to state 27
    neg                            shift and go to state 6
    expt                           shift and go to state 7
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 18

    (14) mult -> mult / . just
    (5) just -> . neg
    (15) just -> . just expt
    (6) neg -> . expt
    (16) neg -> . SUBTRACT neg
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    SUBTRACT        shift and go to state 4
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    just                           shift and go to state 28
    neg                            shift and go to state 6
    expt                           shift and go to state 7
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 19

    (16) neg -> SUBTRACT neg .

    NUMBER          reduce using rule 16 (neg -> SUBTRACT neg .)
    NAME            reduce using rule 16 (neg -> SUBTRACT neg .)
    (               reduce using rule 16 (neg -> SUBTRACT neg .)
    QUOTED          reduce using rule 16 (neg -> SUBTRACT neg .)
    *               reduce using rule 16 (neg -> SUBTRACT neg .)
    /               reduce using rule 16 (neg -> SUBTRACT neg .)
    +               reduce using rule 16 (neg -> SUBTRACT neg .)
    SUBTRACT        reduce using rule 16 (neg -> SUBTRACT neg .)
    =               reduce using rule 16 (neg -> SUBTRACT neg .)
    $end            reduce using rule 16 (neg -> SUBTRACT neg .)
    )               reduce using rule 16 (neg -> SUBTRACT neg .)


state 20

    (15) just -> just expt .

    NUMBER          reduce using rule 15 (just -> just expt .)
    NAME            reduce using rule 15 (just -> just expt .)
    (               reduce using rule 15 (just -> just expt .)
    QUOTED          reduce using rule 15 (just -> just expt .)
    *               reduce using rule 15 (just -> just expt .)
    /               reduce using rule 15 (just -> just expt .)
    +               reduce using rule 15 (just -> just expt .)
    SUBTRACT        reduce using rule 15 (just -> just expt .)
    =               reduce using rule 15 (just -> just expt .)
    $end            reduce using rule 15 (just -> just expt .)
    )               reduce using rule 15 (just -> just expt .)


state 21

    (17) expt -> fact POWER . neg
    (6) neg -> . expt
    (16) neg -> . SUBTRACT neg
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    SUBTRACT        shift and go to state 4
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    fact                           shift and go to state 8
    neg                            shift and go to state 29
    expt                           shift and go to state 7
    atom                           shift and go to state 9

state 22

    (18) fact -> fact FACTORIAL .

    POWER           reduce using rule 18 (fact -> fact FACTORIAL .)
    FACTORIAL       reduce using rule 18 (fact -> fact FACTORIAL .)
    NUMBER          reduce using rule 18 (fact -> fact FACTORIAL .)
    NAME            reduce using rule 18 (fact -> fact FACTORIAL .)
    (               reduce using rule 18 (fact -> fact FACTORIAL .)
    QUOTED          reduce using rule 18 (fact -> fact FACTORIAL .)
    *               reduce using rule 18 (fact -> fact FACTORIAL .)
    /               reduce using rule 18 (fact -> fact FACTORIAL .)
    +               reduce using rule 18 (fact -> fact FACTORIAL .)
    SUBTRACT        reduce using rule 18 (fact -> fact FACTORIAL .)
    =               reduce using rule 18 (fact -> fact FACTORIAL .)
    $end            reduce using rule 18 (fact -> fact FACTORIAL .)
    )               reduce using rule 18 (fact -> fact FACTORIAL .)


state 23

    (19) atom -> ( expr . )
    (11) expr -> expr . + mult
    (12) expr -> expr . SUBTRACT mult

    )               shift and go to state 30
    +               shift and go to state 15
    SUBTRACT        shift and go to state 16


state 24

    (2) statement -> statement = expr .
    (11) expr -> expr . + mult
    (12) expr -> expr . SUBTRACT mult

    =               reduce using rule 2 (statement -> statement = expr .)
    $end            reduce using rule 2 (statement -> statement = expr .)
    +               shift and go to state 15
    SUBTRACT        shift and go to state 16


state 25

    (11) expr -> expr + mult .
    (13) mult -> mult . * just
    (14) mult -> mult . / just

    +               reduce using rule 11 (expr -> expr + mult .)
    SUBTRACT        reduce using rule 11 (expr -> expr + mult .)
    =               reduce using rule 11 (expr -> expr + mult .)
    $end            reduce using rule 11 (expr -> expr + mult .)
    )               reduce using rule 11 (expr -> expr + mult .)
    *               shift and go to state 17
    /               shift and go to state 18


state 26

    (12) expr -> expr SUBTRACT mult .
    (13) mult -> mult . * just
    (14) mult -> mult . / just

    +               reduce using rule 12 (expr -> expr SUBTRACT mult .)
    SUBTRACT        reduce using rule 12 (expr -> expr SUBTRACT mult .)
    =               reduce using rule 12 (expr -> expr SUBTRACT mult .)
    $end            reduce using rule 12 (expr -> expr SUBTRACT mult .)
    )               reduce using rule 12 (expr -> expr SUBTRACT mult .)
    *               shift and go to state 17
    /               shift and go to state 18


state 27

    (13) mult -> mult * just .
    (15) just -> just . expt
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    *               reduce using rule 13 (mult -> mult * just .)
    /               reduce using rule 13 (mult -> mult * just .)
    +               reduce using rule 13 (mult -> mult * just .)
    SUBTRACT        reduce using rule 13 (mult -> mult * just .)
    =               reduce using rule 13 (mult -> mult * just .)
    $end            reduce using rule 13 (mult -> mult * just .)
    )               reduce using rule 13 (mult -> mult * just .)
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    expt                           shift and go to state 20
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 28

    (14) mult -> mult / just .
    (15) just -> just . expt
    (7) expt -> . fact
    (17) expt -> . fact POWER neg
    (8) fact -> . atom
    (18) fact -> . fact FACTORIAL
    (9) atom -> . NUMBER
    (10) atom -> . NAME
    (19) atom -> . ( expr )
    (20) atom -> . QUOTED

    *               reduce using rule 14 (mult -> mult / just .)
    /               reduce using rule 14 (mult -> mult / just .)
    +               reduce using rule 14 (mult -> mult / just .)
    SUBTRACT        reduce using rule 14 (mult -> mult / just .)
    =               reduce using rule 14 (mult -> mult / just .)
    $end            reduce using rule 14 (mult -> mult / just .)
    )               reduce using rule 14 (mult -> mult / just .)
    NUMBER          shift and go to state 10
    NAME            shift and go to state 11
    (               shift and go to state 12
    QUOTED          shift and go to state 13

    expt                           shift and go to state 20
    fact                           shift and go to state 8
    atom                           shift and go to state 9

state 29

    (17) expt -> fact POWER neg .

    NUMBER          reduce using rule 17 (expt -> fact POWER neg .)
    NAME            reduce using rule 17 (expt -> fact POWER neg .)
    (               reduce using rule 17 (expt -> fact POWER neg .)
    QUOTED          reduce using rule 17 (expt -> fact POWER neg .)
    *               reduce using rule 17 (expt -> fact POWER neg .)
    /               reduce using rule 17 (expt -> fact POWER neg .)
    +               reduce using rule 17 (expt -> fact POWER neg .)
    SUBTRACT        reduce using rule 17 (expt -> fact POWER neg .)
    =               reduce using rule 17 (expt -> fact POWER neg .)
    $end            reduce using rule 17 (expt -> fact POWER neg .)
    )               reduce using rule 17 (expt -> fact POWER neg .)


state 30

    (19) atom -> ( expr ) .

    POWER           reduce using rule 19 (atom -> ( expr ) .)
    FACTORIAL       reduce using rule 19 (atom -> ( expr ) .)
    NUMBER          reduce using rule 19 (atom -> ( expr ) .)
    NAME            reduce using rule 19 (atom -> ( expr ) .)
    (               reduce using rule 19 (atom -> ( expr ) .)
    QUOTED          reduce using rule 19 (atom -> ( expr ) .)
    *               reduce using rule 19 (atom -> ( expr ) .)
    /               reduce using rule 19 (atom -> ( expr ) .)
    +               reduce using rule 19 (atom -> ( expr ) .)
    SUBTRACT        reduce using rule 19 (atom -> ( expr ) .)
    =               reduce using rule 19 (atom -> ( expr ) .)
    $end            reduce using rule 19 (atom -> ( expr ) .)
    )               reduce using rule 19 (atom -> ( expr ) .)

